--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- Icons -->
       <ul class="icons">
         <li>
-          <a href="" title="Institutional website"><i class="fas fa-university"></i></a>
+          <a href="publications/test_publi.html" title="Institutional website"><i class="fas fa-university"></i></a>
         </li>
         <li>
           <a href="" title="E-Mail"><i class="fas fa-envelope"></i></a>
