--- a/index.html
+++ b/index.html
@@ -2,81 +2,79 @@
 
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <!-- Define title -->
-    <title>Carl Barks</title>
+    <title>Hugo Schott</title>
 
     <!-- Include favicon. Use, e.g., https://favicon.io/ -->
-    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="bucketHat.png" sizes="32x32"/>
 
     <!-- Include style sheets -->
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="css/index.css"/>
 
     <!-- Fonts from Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;600&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;600&display=swap" rel="stylesheet"/>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Load FontAwesome (for icons) -->
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+            integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+            crossorigin="anonymous"
     />
 
     <!-- Load Academicons (for more icons) -->
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.2/css/academicons.min.css"
-      integrity="sha512-KlJCpRsLf+KKu2VQa5vmRuClRFjxc5lXO03ixZt82HZUk41+1I0bD8KBSA0fY290ayMfWYI9udIqeOWSu1/uZg=="
-      crossorigin="anonymous"
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.2/css/academicons.min.css"
+            integrity="sha512-KlJCpRsLf+KKu2VQa5vmRuClRFjxc5lXO03ixZt82HZUk41+1I0bD8KBSA0fY290ayMfWYI9udIqeOWSu1/uZg=="
+            crossorigin="anonymous"
     />
-  </head>
 
-  <body>
-    <section id="content">
-      <!-- Avatar image -->
-      <img src="image.jpg" alt="Carl Barks" class="avatar" />
+</head>
 
-      <!-- Text -->
-      <h1>Hi, I'm Carl Barks!</h1>
-      <p>
-        I am a Ph.D. student in empirical barkology at Woof University.
-      </p>
-      <p>
-        Most of my current research is driven by trying to find an answer to the age-old question of “Who is a good boy?"
-      </p>
-      <p>
-        Please feel free to get in touch!
-      </p>
+<body>
+<header class="topnav">
+    <a class="active" href="index.html">Home</a>
+    <a href="publications/test_publi.html">Publications</a>
+    <a href="#teaching">Teaching</a>
+    <a href="#projects">Projects</a>
+</header>
 
-      <!-- Icons -->
-      <ul class="icons">
-        <li>
-          <a href="publications/test_publi.html" title="Institutional website"><i class="fas fa-university"></i></a>
-        </li>
-        <li>
-          <a href="" title="E-Mail"><i class="fas fa-envelope"></i></a>
-        </li>
-        <li>
-          <a href="" title="GitHub"><i class="fab fa-github"></i></a>
-        </li>
-        <li>
-          <a href="" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-        </li>
-        <li>
-          <a href="" title="NASA / ADS"><i class="ai ai-ads"></i></a>
-        </li>
-        <li>
-          <a href="" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
-        </li>
-      </ul>
-    </section>
-  </body>
- 
+<div class="container">
+    <div class="row">
+        <div class="col-3 text-center mx-5">
+            <img class="rounded" src="bucketHat.png" alt="Avatar" width="200px">
+            <h2>
+                <centre><strong>Hugo Schott</strong></centre>
+            </h2>
+            <p><a href="mailto:hugo.schott@liris.cnrs.fr">hugo.schott@liris.cnrs.fr</a></p>
+        </div>
+
+        <div class="col mx-4">
+            <p>Some text...</p>
+            <h2 class="subtitle">Column 2</h2>
+            <p>Some text...</p>
+            <p>Some text...</p>
+            <h2 class="subtitle">Teaching</h2>
+            <p>Some text...</p>
+            <p>Some text...</p>
+        </div>
+    </div>
+</div>
+
+<footer class="fixed-bottom text-center">
+    <p>Footer</p>
+</footer>
+</body>
+
 </html>
