--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
             <p class="mail">
                 hugo.schott@liris.cnrs.fr
             </p>
+            <ul class="icons">
+                <li>
+                    <a href="https://liris.cnrs.fr/page-membre/hugo-schott" title="Institutional website"><i class="fas fa-university"></i></a>
+                </li>
+                <li>
+                    <a href="mailto:hugo.schott@liris.cnrs.fr" title="E-Mail"><i class="fas fa-envelope"></i></a>
+                </li>
+                <li>
+                    <a href="https://github.com/H-Schott" title="GitHub"><i class="fab fa-github"></i></a>
+                </li>
+                <li>
+                    <a href="https://scholar.google.com/citations?user=QxzWUB8AAAAJ&hl=fr&oi=ao" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
+                </li>
+            </ul>
         </div>
 
         <div class="col">
