--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
 </head>
 
 <body>
+<!--
 <header class="topnav">
     <a class="active" href="index.html">Home</a>
     <a href="#publications">Publications</a>
     <a href="#teaching">Teaching</a>
     <a href="#projects">Projects</a>
 </header>
+-->
 
 <div class="container">
     <div class="row">
@@ -106,6 +108,7 @@
                 <li>Advanced C++ programming (M1)</li>
             </ul>
 
+
             <h2 class="subtitle">Publications</h2>
             <div class="container">
                 <div class="row">
@@ -113,9 +116,9 @@
                         <img class="mini_publi" src="uplift_mini.png" width="300px">
                     </div>
                     <div class="col">
-                        <p class="publi_title">
+                        <a class="publi_title" href="publications/publi_uplift.html">
                             Large-scale terrain authoring through interactive erosion simulation
-                        </p>
+                        </a>
                         <p class="publi_authors">
                             H. Schott, A. Paris, L. Fournier, E. Guérin, E. Galin.
                         </p>
@@ -125,6 +128,21 @@
                     </div>
                 </div>
             </div>
+
+
+            <h2 class="subtitle">Personal Projects</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col-5">
+                        #TODO
+                    </div>
+                    <div class="col">
+                        #TODO
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </div>
