--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 
         <div class="col">
             <p class="top_par">I'm a PhD student in Computer Graphics at Université Lyon 1.
+                I'm part of the <a class="in_link" href="https://projet.liris.cnrs.fr/origami/">ORIGAMI</a> team
+                and the <a class="in_link" href="https://www.youtube.com/@ArchesTeam/videos">ARCHES</a> group,
+                at <a class="in_link" href="https://liris.cnrs.fr/">LIRIS</a>.
                 My subject is about virtual terrain edition, with a strong focus
                 on erosion simulation.
             </p>
@@ -113,7 +116,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-5">
-                        <img class="mini_publi" src="uplift_mini.png" width="300px">
+                        <a href="publications/publi_uplift.html">
+                            <img class="mini_publi" src="uplift_mini.png" width="300px">
+                        </a>
                     </div>
                     <div class="col">
                         <a class="publi_title" href="publications/publi_uplift.html">
