replaced url requests by files

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Fonts from Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;600&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;600&display=swap"/>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -27,17 +27,13 @@
     <!-- Load FontAwesome (for icons) -->
     <link
             rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-            integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-            crossorigin="anonymous"
+            href="css/all.min.css"
     />
 
     <!-- Load Academicons (for more icons) -->
     <link
             rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.2/css/academicons.min.css"
-            integrity="sha512-KlJCpRsLf+KKu2VQa5vmRuClRFjxc5lXO03ixZt82HZUk41+1I0bD8KBSA0fY290ayMfWYI9udIqeOWSu1/uZg=="
-            crossorigin="anonymous"
+            href="css/academicons.min.css"
     />
 
 </head>
@@ -121,13 +117,13 @@
                         </a>
                     </div>
                     <div class="col">
-                        <a class="publi_title" href="publications/publi_uplift.html">
+                        <a class="mini_publi_title" href="publications/publi_uplift.html">
                             Large-scale terrain authoring through interactive erosion simulation
                         </a>
-                        <p class="publi_authors">
+                        <p class="mini_publi_authors">
                             H. Schott, A. Paris, L. Fournier, E. Guérin, E. Galin.
                         </p>
-                        <p class="publi_journal">
+                        <p class="mini_publi_journal">
                             ACM Transactions on Graphics, 42(5), 2023.
                         </p>
                     </div>
