uplift publi page creation

--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-5">
-                        <a href="publications/publi_uplift.html">
+                        <a href="publications/uplift/publi_uplift.html">
                             <img class="mini_publi" src="uplift_mini.png" width="300px">
                         </a>
                     </div>
                     <div class="col">
-                        <a class="mini_publi_title" href="publications/publi_uplift.html">
-                            Large-scale terrain authoring through interactive erosion simulation
+                        <a class="mini_publi_title" href="publications/uplift/publi_uplift.html">
+                            Large-scale terrain authoring through
+                            interactive erosion simulation
                         </a>
                         <p class="mini_publi_authors">
                             H. Schott, A. Paris, L. Fournier, E. Guérin, E. Galin.
