fix on home and update uplift

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="row">
                     <div class="col-5">
                         <a href="publications/uplift/publi_uplift.html">
-                            <img class="mini_publi" src="uplift_mini.png" width="300px">
+                            <img class="mini_publi" src="uplift_mini.png">
                         </a>
                     </div>
                     <div class="col">
