--- a/publications/uplift/publi_uplift.html
+++ b/publications/uplift/publi_uplift.html
@@ -54,14 +54,32 @@
     E. Galin
 </p>
 
+<div class="publi_buttons text-center">
+    <button class="publi_button" onclick="window.location.href='https://hal.science/hal-04049125/document';">
+        PDF
+    </button>&emsp;&emsp;&emsp;
+    <button class="publi_button" onclick="window.location.href='https://dl.acm.org/doi/10.1145/3592787';">
+        ACM ToG
+    </button>&emsp;&emsp;&emsp;
+    <button class="publi_button" onclick="window.location.href='https://hal.science/hal-04049125/';">
+        HAL
+    </button>&emsp;&emsp;&emsp;
+    <button class="publi_button" onclick="window.location.href='https://www.youtube.com/watch?v=gCP7jzcPLyQ';">
+        Video
+    </button>&emsp;&emsp;&emsp;
+    <button class="publi_button" onclick="window.location.href='https://github.com/H-Schott/StreamPowerErosion';">
+        Code
+    </button>
+</div>
+
 <img class="publi_teaser" src="teaser_uplift.png" width="1000">
 
 <p class="publi_abstract">
     Large-scale terrains are essential in the definition of virtual worlds. Given
     the diversity of landforms and the geomorphological complexity, there is
     a need for authoring techniques offering hydrological consistency without
-    sacrificing user control. In this paper, we bridge the gap between large-
-    scale erosion simulation and authoring into an efficient framework. We
+    sacrificing user control. In this paper, we bridge the gap between large-scale
+    erosion simulation and authoring into an efficient framework. We
     set aside modelling in the elevation domain in favour of the uplift domain,
     and compute emerging reliefs by simulating the stream power erosion. Our
     simulation relies on a fast yet accurate approximation of drainage area
@@ -78,6 +96,28 @@
 <iframe class="publi_video"
         src="https://www.youtube.com/embed/gCP7jzcPLyQ">
 </iframe>
+
+<div class="publi_bibtex">
+    @article{10.1145/3592787,<br>
+        &emsp; &emsp; &emsp; author = {Schott, Hugo and Paris, Axel and Fournier, Lucie and Gu\'{e}rin, Eric and Galin, Eric},<br>
+        &emsp; &emsp; &emsp; title = {Large-Scale Terrain Authoring through Interactive Erosion Simulation},<br>
+        &emsp; &emsp; &emsp; year = {2023},<br>
+        &emsp; &emsp; &emsp; issue_date = {October 2023},<br>
+        &emsp; &emsp; &emsp; publisher = {Association for Computing Machinery},<br>
+        &emsp; &emsp; &emsp; address = {New York, NY, USA},<br>
+        &emsp; &emsp; &emsp; volume = {42},<br>
+        &emsp; &emsp; &emsp; number = {5},<br>
+        &emsp; &emsp; &emsp; issn = {0730-0301},<br>
+        &emsp; &emsp; &emsp; url = {https://doi.org/10.1145/3592787},<br>
+        &emsp; &emsp; &emsp; doi = {10.1145/3592787},<br>
+        &emsp; &emsp; &emsp; journal = {ACM Trans. Graph.},<br>
+        &emsp; &emsp; &emsp; month = {jul},<br>
+        &emsp; &emsp; &emsp; articleno = {162},<br>
+        &emsp; &emsp; &emsp; numpages = {15},<br>
+        &emsp; &emsp; &emsp; keywords = {landscapes, Erosion simulation}<br>
+        }
+</div>
+<div class="publi_bottom_page"></div>
 
 
 <footer class="fixed-bottom text-center">
