--- a/index.html
+++ b/index.html
@@ -136,13 +136,50 @@
             <div class="container">
                 <div class="row">
                     <div class="col-5">
-                        #TODO
+                        <a href="https://github.com/H-Schott/GeometryTools">
+                            <img class="mini_project" src="geometry.png">
+                        </a>
                     </div>
                     <div class="col">
-                        #TODO
+                        <a class="mini_publi_title" href="https://github.com/H-Schott/GeometryTools">
+                            Basic geometry classes.
+                        </a>
+                        <p class="project_language">C++</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-5">
+                        <a href="https://github.com/H-Schott/DDG_Project">
+                            <img class="mini_project" src="ddg_mini.png">
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a class="mini_publi_title" href="https://github.com/H-Schott/DDG_Project">
+                            OpenGL project for Mesh visualization and manipulation.
+                        </a>
+                        <p class="project_language">C++</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-5">
+                        <a href="https://github.com/H-Schott/PBR_RTT_V2">
+                            <img class="mini_project" src="rtt.png">
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a class="mini_publi_title" href="https://github.com/H-Schott/PBR_RTT_V2">
+                            CPU ray tracing, made for terrains (and other things).
+                        </a>
+                        <p class="project_language">C++</p>
                     </div>
                 </div>
             </div>
+
+
+            <h2 class="subtitle">Bug Gallery</h2>
+
+
+            <div class="home_bottom_page"></div>
 
 
         </div>
