add stuff in bug gallery

--- a/index.html
+++ b/index.html
@@ -177,7 +177,11 @@
 
 
             <h2 class="subtitle">Bug Gallery</h2>
-
+            <div class="bug_row">
+                <img class="mini_bug" src="bug_001.png">
+                <img class="mini_bug" src="bug_002.png">
+                <img class="mini_bug" src="bug_003.png">
+            </div>
 
             <div class="home_bottom_page"></div>
 
