--- a/publications/uplift/publi_uplift.html
+++ b/publications/uplift/publi_uplift.html
@@ -99,23 +99,24 @@
 
 <div class="publi_bibtex">
     @article{10.1145/3592787,<br>
-        &emsp; &emsp; &emsp; author = {Schott, Hugo and Paris, Axel and Fournier, Lucie and Gu\'{e}rin, Eric and Galin, Eric},<br>
-        &emsp; &emsp; &emsp; title = {Large-Scale Terrain Authoring through Interactive Erosion Simulation},<br>
-        &emsp; &emsp; &emsp; year = {2023},<br>
-        &emsp; &emsp; &emsp; issue_date = {October 2023},<br>
-        &emsp; &emsp; &emsp; publisher = {Association for Computing Machinery},<br>
-        &emsp; &emsp; &emsp; address = {New York, NY, USA},<br>
-        &emsp; &emsp; &emsp; volume = {42},<br>
-        &emsp; &emsp; &emsp; number = {5},<br>
-        &emsp; &emsp; &emsp; issn = {0730-0301},<br>
-        &emsp; &emsp; &emsp; url = {https://doi.org/10.1145/3592787},<br>
-        &emsp; &emsp; &emsp; doi = {10.1145/3592787},<br>
-        &emsp; &emsp; &emsp; journal = {ACM Trans. Graph.},<br>
-        &emsp; &emsp; &emsp; month = {jul},<br>
-        &emsp; &emsp; &emsp; articleno = {162},<br>
-        &emsp; &emsp; &emsp; numpages = {15},<br>
-        &emsp; &emsp; &emsp; keywords = {landscapes, Erosion simulation}<br>
-        }
+    &emsp; &emsp; &emsp; author = {Schott, Hugo and Paris, Axel and Fournier, Lucie and Gu\'{e}rin, Eric and Galin,
+    Eric},<br>
+    &emsp; &emsp; &emsp; title = {Large-Scale Terrain Authoring through Interactive Erosion Simulation},<br>
+    &emsp; &emsp; &emsp; year = {2023},<br>
+    &emsp; &emsp; &emsp; issue_date = {October 2023},<br>
+    &emsp; &emsp; &emsp; publisher = {Association for Computing Machinery},<br>
+    &emsp; &emsp; &emsp; address = {New York, NY, USA},<br>
+    &emsp; &emsp; &emsp; volume = {42},<br>
+    &emsp; &emsp; &emsp; number = {5},<br>
+    &emsp; &emsp; &emsp; issn = {0730-0301},<br>
+    &emsp; &emsp; &emsp; url = {https://doi.org/10.1145/3592787},<br>
+    &emsp; &emsp; &emsp; doi = {10.1145/3592787},<br>
+    &emsp; &emsp; &emsp; journal = {ACM Trans. Graph.},<br>
+    &emsp; &emsp; &emsp; month = {jul},<br>
+    &emsp; &emsp; &emsp; articleno = {162},<br>
+    &emsp; &emsp; &emsp; numpages = {15},<br>
+    &emsp; &emsp; &emsp; keywords = {landscapes, Erosion simulation}<br>
+    }
 </div>
 <div class="publi_bottom_page"></div>
 
