add libraries in personal projects

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                             OpenGL project for Mesh visualization and manipulation.
                         </a>
                         <p class="project_language">C++</p>
+                        <p class="project_language">AssetImporter, Eigen, GLM, OpenGL, ImGui</p>
                     </div>
                 </div>
                 <div class="row">
@@ -171,6 +172,7 @@
                             CPU ray tracing, made for terrains (and other things).
                         </a>
                         <p class="project_language">C++</p>
+                        <p class="project_language">AssetImporter, Eigen</p>
                     </div>
                 </div>
             </div>
