--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 </header>
 -->
 
-<div class="container">
+<div class="big_container">
     <div class="row">
-        <div class="col-3 text-center mx-5">
+        <!--<div class="col-3 text-center mx-5">-->
+        <div class="left_main_col text-center">
             <img class="rounded" src="bucketHat.png" alt="Avatar" width="200px">
             <h2 class="main_name">
                 <strong>Hugo Schott</strong>
@@ -77,7 +78,8 @@
             </ul>
         </div>
 
-        <div class="col">
+        <!--<div class="col">-->
+        <div class="right_main_col">
             <p class="top_par">I'm a PhD student in Computer Graphics at Université Lyon 1.
                 I'm part of the <a class="in_link" href="https://projet.liris.cnrs.fr/origami/">ORIGAMI</a> team
                 and the <a class="in_link" href="https://www.youtube.com/@ArchesTeam/videos">ARCHES</a> group,
