--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
 
             <h2 class="subtitle">Publications</h2>
             <div class="container">
-                <div class="row">
-                    <div class="col-5">
+                <div class="mid_row">
+                    <div class="left_secondary_col">
                         <a href="publications/uplift/publi_uplift.html">
                             <img class="mini_publi" src="uplift_mini.png">
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="right_secondary_col">
                         <a class="mini_publi_title" href="publications/uplift/publi_uplift.html">
                             Large-scale terrain authoring through
                             interactive erosion simulation
@@ -136,13 +136,13 @@
 
             <h2 class="subtitle">Personal Projects</h2>
             <div class="container">
-                <div class="row">
-                    <div class="col-5">
+                <div class="mid_row">
+                    <div class="left_secondary_col">
                         <a href="https://github.com/H-Schott/DDG_Project">
                             <img class="mini_project" src="ddg_mini.png">
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="right_secondary_col">
                         <a class="mini_publi_title" href="https://github.com/H-Schott/DDG_Project">
                             OpenGL project for Mesh visualization and manipulation.
                         </a>
@@ -150,13 +150,13 @@
                         <p class="project_language">AssetImporter, Eigen, GLM, OpenGL, ImGui</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-5">
+                <div class="mid_row">
+                    <div class="left_secondary_col">
                         <a href="https://github.com/H-Schott/PBR_RTT_V2">
                             <img class="mini_project" src="rtt.png">
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="right_secondary_col">
                         <a class="mini_publi_title" href="https://github.com/H-Schott/PBR_RTT_V2">
                             CPU ray tracing, made for terrains (and other things).
                         </a>
