--- a/publications/uplift/publi_uplift.html
+++ b/publications/uplift/publi_uplift.html
@@ -15,7 +15,7 @@
 
     <!-- Include style sheets -->
     <link rel="stylesheet" href="../../css/publi.css"/>
-    <link rel="stylesheet" href="../../css/index.css"/>
+    <link rel="stylesheet" href="../../css/indexa.css"/>
 
     <!-- Fonts from Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
