--- a/index.html
+++ b/index.html
@@ -114,6 +114,24 @@
             <div class="container">
                 <div class="mid_row">
                     <div class="left_secondary_col">
+                        <a href="publications/uplift/publi_mserosion.html">
+                            <img class="mini_publi" src="mserosion_mini.png">
+                        </a>
+                    </div>
+                    <div class="right_secondary_col">
+                        <a class="mini_publi_title" href="publications/mserosion/publi_mserosion.html">
+                            Terrain Amplification using Multi-Scale Erosion
+                        </a>
+                        <p class="mini_publi_authors">
+                            H. Schott, E. Galin, E. Guérin, A. Peytavie, A. Paris.
+                        </p>
+                        <p class="mini_publi_journal">
+                            ACM Transactions on Graphics, ?, 2024.
+                        </p>
+                    </div>
+                </div>
+                <div class="mid_row">
+                    <div class="left_secondary_col">
                         <a href="publications/uplift/publi_uplift.html">
                             <img class="mini_publi" src="uplift_mini.png">
                         </a>
