fill cite + fix link

--- a/publications/mserosion/publi_mserosion.html
+++ b/publications/mserosion/publi_mserosion.html
@@ -57,7 +57,7 @@
     <button class="publi_button" onclick="window.location.href='https://hal.science/hal-04565030v1/document';">
         PDF
     </button>&emsp;&emsp;&emsp;
-    <button class="publi_button" onclick="window.location.href='publi_mserosion.html';">
+    <button class="publi_button" onclick="window.location.href='https://dl.acm.org/doi/10.1145/3658200';">
         ACM ToG
     </button>&emsp;&emsp;&emsp;
     <button class="publi_button" onclick="window.location.href='https://hal.science/LIRIS/hal-04565030v1';">
@@ -94,22 +94,22 @@ mountain ranges and valleys with consistent details.
 
 <div class="publi_bibtex">
     @article{?,<br>
-    &emsp; &emsp; &emsp; author = {Schott, Hugo and Galin, Eric and Gu\'{e}rin, Eric and Peytavie, Adrien and Paris, Axel},<br>
-    &emsp; &emsp; &emsp; title = {Terrain Amplification using Multi-Scale Erosion},<br>
+        author = {Schott, Hugo and Galin, Eric and Gu\'{e}rin, Eric and Peytavie, Adrien and Paris, Axel},<br>
+        title = {Terrain Amplification using Multi-Scale Erosion},<br>
     &emsp; &emsp; &emsp; year = {2024},<br>
-    &emsp; &emsp; &emsp; issue_date = {?},<br>
+    &emsp; &emsp; &emsp; issue_date = {July 2024},<br>
     &emsp; &emsp; &emsp; publisher = {Association for Computing Machinery},<br>
     &emsp; &emsp; &emsp; address = {New York, NY, USA},<br>
-    &emsp; &emsp; &emsp; volume = {?},<br>
-    &emsp; &emsp; &emsp; number = {?},<br>
-    &emsp; &emsp; &emsp; issn = {?},<br>
-    &emsp; &emsp; &emsp; url = {?},<br>
-    &emsp; &emsp; &emsp; doi = {?},<br>
+    &emsp; &emsp; &emsp; volume = {43},<br>
+    &emsp; &emsp; &emsp; number = {4},<br>
+    &emsp; &emsp; &emsp; issn = {0730-0301},<br>
+    &emsp; &emsp; &emsp; url = {https://doi.org/10.1145/3658200},<br>
+    &emsp; &emsp; &emsp; doi = {10.1145/3658200},<br>
     &emsp; &emsp; &emsp; journal = {ACM Trans. Graph.},<br>
-    &emsp; &emsp; &emsp; month = {?},<br>
-    &emsp; &emsp; &emsp; articleno = {?},<br>
-    &emsp; &emsp; &emsp; numpages = {?},<br>
-    &emsp; &emsp; &emsp; keywords = {landscapes, Erosion simulation}<br>
+    &emsp; &emsp; &emsp; month = jul,<br>
+    &emsp; &emsp; &emsp; articleno = {145},<br>
+    &emsp; &emsp; &emsp; numpages = {12},<br>
+    &emsp; &emsp; &emsp; keywords = {landscapes, erosion simulation}<br>
     }
 </div>
 <div class="publi_bottom_page"></div>
