--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             H. Schott, E. Galin, E. Guérin, A. Peytavie, A. Paris.
                         </p>
                         <p class="mini_publi_journal">
-                            ACM Transactions on Graphics, ?, 2024.
+                            ACM Transactions on Graphics, 43(4), 2024.
                         </p>
                     </div>
                 </div>
