--- a/index.html
+++ b/index.html
@@ -114,6 +114,24 @@
             <div class="container">
                 <div class="mid_row">
                     <div class="left_secondary_col">
+                        <a href="https://aparis69.github.io/SphereCarving/index.html">
+                            <img class="mini_publi" src="spherecarving_mini.png">
+                        </a>
+                    </div>
+                    <div class="right_secondary_col">
+                        <a class="mini_publi_title" href="https://aparis69.github.io/SphereCarving/index.html">
+                            Sphere Carving: Bounding Volumes for Signed Distance Fields
+                        </a>
+                        <p class="mini_publi_authors">
+                            H. Schott, T. Thonat, T. Lambert, E. Guérin, E. Galin, A. Paris.
+                        </p>
+                        <p class="mini_publi_journal">
+                            ACM Transactions on Graphics, 44(4), 2025.
+                        </p>
+                    </div>
+                </div>
+                <div class="mid_row">
+                    <div class="left_secondary_col">
                         <a href="publications/mserosion/publi_mserosion.html">
                             <img class="mini_publi" src="mserosion_mini.png">
                         </a>
